Squash some bugs for a squeaky clean shine
* Revert line '91' of the main index to a console error (warnings don't make the cut, sorry).
* Introduce tooltips for buttons and checkboxes - will only be displayed for when the label text exceeds 21 characters.
* Select boxes now have a fancy arrow animation whenever the dropdown menu is opened and closed.
* Bump version number from '2.0.0' to '2.0.1'.

--- a/core/styles/style.scss
+++ b/core/styles/style.scss
@@ -46,6 +46,15 @@
     transition: height 0.15s ease-in-out 0s;
   }
 
+  #quickActions-selectBox div[class*='-indicatorContainer'] > svg {
+    transform: rotate(0deg);
+    transition: transform .3s ease;
+  }
+
+  #quickActions-selectBox > .css-2yldzf-control .css-1flfamv-indicatorContainer > svg {
+    transform: rotate(-180deg);
+  }
+
   &#quickActions-mu-users {
     button:not([class*='reset-']):last-child {
       color: #f04747;
